[gd_scene load_steps=5 format=3 uid="uid://d3g6wbvwflmyk"]

[ext_resource type="Script" uid="uid://f4w5734blvbb" path="res://src/UI/GameMenu/SaveLoadMenu/SaveLoadMenu.gd" id="1_3jkds"]
[ext_resource type="PackedScene" uid="uid://d2s7roinx2or7" path="res://src/UI/GameMenu/SaveLoadMenu/SavePanelButton.tscn" id="2_fc6r3"]

[sub_resource type="InputEventAction" id="InputEventAction_8vo2t"]
action = &"ui_accept"
pressed = true

[sub_resource type="Shortcut" id="Shortcut_o1f2l"]
events = [SubResource("InputEventAction_8vo2t")]

[node name="SaveLoadMenu" type="MarginContainer" node_paths=PackedStringArray("_label", "_scroll_list", "_save_line_edit", "_save_load_button", "_tag_selection_tab", "_delete_dialog", "_overwrite_dialog")]
editor_description = "UI-82, UI-89"
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 250
theme_override_constants/margin_top = 100
theme_override_constants/margin_right = 250
theme_override_constants/margin_bottom = 100
script = ExtResource("1_3jkds")
_save_scene = ExtResource("2_fc6r3")
_label = NodePath("SaveLoadPanel/SaveLoadList/TitleBarList/SaveLoadLabel")
_scroll_list = NodePath("SaveLoadPanel/SaveLoadList/SaveLoadScroll/SaveLoadScrollList")
_save_line_edit = NodePath("SaveLoadPanel/SaveLoadList/SaveLineEdit")
_save_load_button = NodePath("SaveLoadPanel/SaveLoadList/SaveLoadButton")
_tag_selection_tab = NodePath("SaveLoadPanel/SaveLoadList/TagSelectionList/TagSelectionTabBar")
_delete_dialog = NodePath("DeleteDialog")
_overwrite_dialog = NodePath("OverwriteDialog")

[node name="SaveLoadPanel" type="PanelContainer" parent="."]
layout_mode = 2
mouse_force_pass_scroll_events = false

[node name="SaveLoadList" type="VBoxContainer" parent="SaveLoadPanel"]
layout_mode = 2

[node name="TitleBarList" type="HBoxContainer" parent="SaveLoadPanel/SaveLoadList"]
layout_mode = 2
alignment = 2

[node name="SaveLoadLabel" type="Label" parent="SaveLoadPanel/SaveLoadList/TitleBarList"]
layout_mode = 2
size_flags_horizontal = 6
text = "SAVELOADMENU_SAVE_TITLE"

[node name="CloseButton" type="Button" parent="SaveLoadPanel/SaveLoadList/TitleBarList"]
editor_description = "UI-87, UI-94"
layout_mode = 2
text = "X"

[node name="TagSelectionList" type="HBoxContainer" parent="SaveLoadPanel/SaveLoadList"]
layout_mode = 2

[node name="TagSelectionLabel" type="Label" parent="SaveLoadPanel/SaveLoadList/TagSelectionList"]
layout_mode = 2
text = "SAVELOADMENU_SESSION"

[node name="TagSelectionTabBar" type="TabBar" parent="SaveLoadPanel/SaveLoadList/TagSelectionList"]
layout_mode = 2
size_flags_horizontal = 3
tab_count = 1
tab_0/title = "SAVELOADMENU_TABSELECTIONTABBAR_ALL"

[node name="SaveLoadScroll" type="ScrollContainer" parent="SaveLoadPanel/SaveLoadList"]
editor_description = "UI-83, UI-90"
layout_mode = 2
size_flags_vertical = 3

[node name="SaveLoadScrollList" type="VBoxContainer" parent="SaveLoadPanel/SaveLoadList/SaveLoadScroll"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="SaveLineEdit" type="LineEdit" parent="SaveLoadPanel/SaveLoadList"]
editor_description = "UI-85, UI-92"
layout_mode = 2

[node name="SaveLoadButton" type="Button" parent="SaveLoadPanel/SaveLoadList"]
editor_description = "UIFUN-82, UIFUN-87"
layout_mode = 2
size_flags_horizontal = 4
shortcut = SubResource("Shortcut_o1f2l")
shortcut_feedback = false
text = "SAVELOADMENU_SAVE_BUTTON"

[node name="DeleteDialog" type="ConfirmationDialog" parent="."]
disable_3d = true
title = "SAVELOADMENU_DELETE_DIALOG_TITLE"
ok_button_text = "DIALOG_OK"
dialog_text = "SAVELOADMENU_DELETE_DIALOG_TEXT"
cancel_button_text = "DIALOG_CANCEL"

[node name="OverwriteDialog" type="ConfirmationDialog" parent="."]
disable_3d = true
title = "SAVELOADMENU_OVERWRITE_DIALOG_TITLE"
ok_button_text = "DIALOG_OK"
dialog_text = "SAVELOADMENU_OVERWRITE_DIALOG_TEXT"
cancel_button_text = "DIALOG_CANCEL"

[connection signal="visibility_changed" from="." to="." method="_on_visibility_changed"]
[connection signal="pressed" from="SaveLoadPanel/SaveLoadList/TitleBarList/CloseButton" to="." method="_on_close_button_pressed"]
[connection signal="tab_changed" from="SaveLoadPanel/SaveLoadList/TagSelectionList/TagSelectionTabBar" to="." method="_on_tag_selection_tab_bar_tab_changed"]
[connection signal="text_submitted" from="SaveLoadPanel/SaveLoadList/SaveLineEdit" to="." method="_on_save_line_edit_text_submitted"]
[connection signal="pressed" from="SaveLoadPanel/SaveLoadList/SaveLoadButton" to="." method="_on_save_load_button_pressed"]
[connection signal="confirmed" from="DeleteDialog" to="." method="_on_delete_dialog_confirmed"]
[connection signal="confirmed" from="OverwriteDialog" to="." method="_on_overwrite_dialog_confirmed"]
